# gmd-legacy-client-https-support

./: .gitignore  CMakeLists.txt  README.md  build_dependencies.sh  download_ca_info.sh  shell.nix
.github/workflows/: release.yml
src/: entry.c
